# CMake 最低版本号要求
cmake_minimum_required(VERSION 3.15)
# 项目信息
project(game)
set(CMAKE_CXX_STANDARD 11)
# 查找当前目录下的所有源文件
# 并将名称保存到 DIR_SRCS 变量
aux_source_directory(. DIR_SRCS)
# 添加头文件路径
include_directories("${PROJECT_SOURCE_DIR}/include")
# 添加 math 子目录
add_subdirectory(games)
# 指定生成目标
add_executable(game main.cpp)
# 添加链接库
target_link_libraries(game games)